Added logos and changed final colors

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,15 +11,15 @@ div {
 }
 
 .bg-orange {
-  background-color: #ffb427;
+  background-color: #ff6600;
 }
 
 .bg-teal {
-  background-color: #6dd9c9;
+  background-color: #0b9995;
 }
 
 .text-teal {
-  color: #6dd9c9;
+  color: #0b9995;
 }
 
 .footer {
