--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,25 +37,32 @@ div {
   height: 60vh;
 }
 
-li {
+.footer li {
   overflow: hidden;
   list-style: none;
   white-space: nowrap;
   display: inline-block;
 }
-li span {
+.footer li span {
   opacity: 0;
   max-width: 0;
   display: inline-block;
   text-decoration: none;
   transition: max-width 0.1s ease-out, opacity 0.1s ease-out;
 }
-ul:hover span {
+.footer ul:hover span {
   opacity: 1;
   max-width: 250px;
   transition: max-width 0.5s ease-out, opacity 1s ease-out;
 }
-li:hover + .icon {
+.footer li:hover + .icon {
   transform: scale(1.2);
   transition: 0.5s ease-out;
+}
+ul {
+  margin-top: 10px !important;
+}
+li {
+  list-style-type: disc;
+  line-height: 12px;
 }
