--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,3 +66,9 @@ li {
   list-style-type: disc;
   line-height: 12px;
 }
+li.slide {
+  list-style-type: none;
+}
+.carousel .slider {
+  width: 90vw !important;
+}
