--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,6 +69,9 @@ li {
 li.slide {
   list-style-type: none;
 }
+ul.multiline li {
+  line-height: 24px;
+}
 .carousel .slider {
   width: 90vw !important;
 }
