--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,10 @@ div {
   background-color: #ff6600;
 }
 
+.text-orange {
+  color: #ff6600;
+}
+
 .bg-teal {
   background-color: #0b9995;
 }
@@ -73,5 +77,5 @@ ul.multiline li {
   line-height: 24px;
 }
 .carousel .slider {
-  width: 90vw !important;
+  width: 80vw !important;
 }
