--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,11 +11,11 @@ div {
 }
 
 .bg-orange {
-  background-color: #ff6600;
+  background-color: #ff9d5c;
 }
 
 .text-orange {
-  color: #ff6600;
+  color: #ff9d5c;
 }
 
 .bg-teal {
